@@ -14,6 +14,46 @@
 - [Q8 — ConfigMaps, Secrets, and Configuration Management](#q8-configmaps-secrets-and-configuration-management)
 - [Q9 — Horizontal Pod Autoscaler and Cluster Autoscaler](#q9-horizontal-pod-autoscaler-and-cluster-autoscaler)
 - [Q10 — Network Policies — Microsegmentation in Kubernetes](#q10-network-policies--microsegmentation-in-kubernetes)
+- [Q11 — Init Containers, Sidecar Containers, and Multi-Container Pod Patterns](#q11-init-containers-sidecar-containers-and-multi-container-pod-patterns)
+- [Q12 — Kubernetes DNS, Service Discovery, and CoreDNS Troubleshooting](#q12-kubernetes-dns-service-discovery-and-coredns-troubleshooting)
+- [Q13 — Jobs and CronJobs — Batch Processing in Kubernetes](#q13-jobs-and-cronjobs--batch-processing-in-kubernetes)
+- [Q14 — Kubernetes Probes — Liveness, Readiness, and Startup](#q14-kubernetes-probes--liveness-readiness-and-startup)
+- [Q15 — Kubernetes Debugging — kubectl debug, ephemeral containers, and common issues](#q15-kubernetes-debugging--kubectl-debug-ephemeral-containers-and-common-issues)
+- [Q16 — Kubernetes Namespaces — Multi-Tenancy and Resource Isolation](#q16-kubernetes-namespaces--multi-tenancy-and-resource-isolation)
+- [Q17 — DaemonSets — Running Agents on Every Node](#q17-daemonsets--running-agents-on-every-node)
+- [Q18 — Kubernetes Security — PodSecurity, SecurityContext, and OPA Gatekeeper](#q18-kubernetes-security--podsecurity-securitycontext-and-opa-gatekeeper)
+- [Q19 — Kubernetes Upgrades — Cluster Upgrade Strategy](#q19-kubernetes-upgrades--cluster-upgrade-strategy)
+- [Q20 — Kubernetes Monitoring — Metrics Server, kubectl top, and Resource Observability](#q20-kubernetes-monitoring--metrics-server-kubectl-top-and-resource-observability)
+- [Q21 — Helm — Package Manager for Kubernetes](#q21-helm--package-manager-for-kubernetes)
+- [Q22 — GitOps with ArgoCD — Continuous Delivery for Kubernetes](#q22-gitops-with-argocd--continuous-delivery-for-kubernetes)
+- [Q23 — Service Mesh — Istio Basics for Microservice Communication](#q23-service-mesh--istio-basics-for-microservice-communication)
+- [Q24 — Kubernetes Troubleshooting — Complete Debugging Framework](#q24-kubernetes-troubleshooting--complete-debugging-framework)
+- [Q25 — Pod Disruption Budgets (PDBs) — Ensuring Availability During Maintenance](#q25-pod-disruption-budgets-pdbs--ensuring-availability-during-maintenance)
+- [Q26 — Kubernetes Logging Architecture — EFK/ELK Stack on Kubernetes](#q26-kubernetes-logging-architecture--efkelk-stack-on-kubernetes)
+- [Q27 — Kubernetes etcd — Backup, Restore, and Disaster Recovery](#q27-kubernetes-etcd--backup-restore-and-disaster-recovery)
+- [Q28 — Kubernetes Admission Controllers and Webhooks](#q28-kubernetes-admission-controllers-and-webhooks)
+- [Q29 — Kubernetes Horizontal Scaling with Custom and External Metrics](#q29-kubernetes-horizontal-scaling-with-custom-and-external-metrics)
+- [Q30 — Kubernetes Cost Optimization — Spot Instances, Right-Sizing, and Idle Resources](#q30-kubernetes-cost-optimization--spot-instances-right-sizing-and-idle-resources)
+- [Q31 — Kubernetes Ingress — Routing, TLS Termination, and ALB Ingress Controller](#q31-kubernetes-ingress--routing-tls-termination-and-alb-ingress-controller)
+- [Q32 — StatefulSets Deep Dive — Running Databases on Kubernetes](#q32-statefulsets-deep-dive--running-databases-on-kubernetes)
+- [Q33 — Kubernetes Taints, Tolerations, and Node Affinity — Advanced Scheduling](#q33-kubernetes-taints-tolerations-and-node-affinity--advanced-scheduling)
+- [Q34 — Kubernetes API Versioning, CRDs, and Operators](#q34-kubernetes-api-versioning-crds-and-operators)
+- [Q35 — Kubernetes Service Accounts, IRSA, and Pod Identity](#q35-kubernetes-service-accounts-irsa-and-pod-identity)
+- [Q36 — Kubernetes Networking Deep Dive — CNI, kube-proxy, iptables/IPVS](#q36-kubernetes-networking-deep-dive--cni-kube-proxy-iptablesipvs)
+- [Q37 — Kubernetes ConfigMap and Secret Management — Advanced Patterns](#q37-kubernetes-configmap-and-secret-management--advanced-patterns)
+- [Q38 — Kubernetes Autoscaling Trio — HPA + VPA + Cluster Autoscaler](#q38-kubernetes-autoscaling-trio--hpa--vpa--cluster-autoscaler)
+- [Q39 — Kubernetes Troubleshooting — Networking Issues](#q39-kubernetes-troubleshooting--networking-issues)
+- [Q40 — Kubernetes Pod Priority and Preemption](#q40-kubernetes-pod-priority-and-preemption)
+- [Q41 — Kubernetes Volume Snapshots and Data Migration](#q41-kubernetes-volume-snapshots-and-data-migration)
+- [Q42 — Kubernetes Multi-Cluster Management](#q42-kubernetes-multi-cluster-management)
+- [Q43 — Kubernetes Security — RBAC Deep Dive](#q43-kubernetes-security--rbac-deep-dive)
+- [Q44 — Kubernetes Resource Management — LimitRange, Overhead, and QoS Deep Dive](#q44-kubernetes-resource-management--limitrange-overhead-and-qos-deep-dive)
+- [Q45 — Kubernetes Graceful Shutdown and Zero-Downtime Deployments](#q45-kubernetes-graceful-shutdown-and-zero-downtime-deployments)
+- [Q46 — Kubernetes with Terraform — IaC for Cluster and Workloads](#q46-kubernetes-with-terraform--iac-for-cluster-and-workloads)
+- [Q47 — Kubernetes Troubleshooting — Application Performance](#q47-kubernetes-troubleshooting--application-performance)
+- [Q48 — Kubernetes Windows Nodes and Mixed Clusters](#q48-kubernetes-windows-nodes-and-mixed-clusters)
+- [Q49 — Kubernetes Capacity Planning and Load Testing](#q49-kubernetes-capacity-planning-and-load-testing)
+- [Q50 — Kubernetes Future — Gateway API, Sidecar-less Service Mesh, and Platform Engineering](#q50-kubernetes-future--gateway-api-sidecar-less-service-mesh-and-platform-engineering)
 
 ---
 
@@ -5831,5 +5871,2818 @@ kubectl get svc --all-namespaces -o json | \
 
 ---
 
-*More Kubernetes questions coming in the next batch (Q31–Q50)...*
+## Q31. Kubernetes Ingress — Routing, TLS Termination, and ALB Ingress Controller
 
+### Question
+
+> Your cluster hosts 10 microservices that all need to be exposed via HTTPS on a single domain with path-based routing (e.g., `/api/orders`, `/api/payments`, `/api/users`). How do you configure Ingress? Compare NGINX Ingress Controller vs AWS ALB Ingress Controller. How do you handle TLS certificates, rate limiting, and canary routing at the Ingress level?
+
+### Real-Life Scenario
+
+Your team creates a separate AWS ALB (LoadBalancer service) for each microservice — 10 ALBs at $18/month each = $180/month plus data transfer costs. By consolidating to a single Ingress with path-based routing, you reduce to 1 ALB = $18/month.
+
+### Answer
+
+#### Ingress Architecture
+
+```
+Client → DNS (api.mycompany.com)
+           │
+           ▼
+       AWS ALB / NLB (single load balancer)
+           │
+           ▼
+       Ingress Controller Pod (NGINX or ALB)
+           │
+           ├── /api/orders   → order-service:8080
+           ├── /api/payments → payment-service:8080
+           ├── /api/users    → user-service:8080
+           └── /             → frontend-service:3000
+```
+
+#### NGINX Ingress with Path-Based Routing
+
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-ingress
+  namespace: backend
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
+    # Rate limiting
+    nginx.ingress.kubernetes.io/limit-rps: "50"
+    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
+    # CORS
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://mycompany.com"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - api.mycompany.com
+      secretName: api-tls-cert        # cert-manager auto-creates this
+  rules:
+    - host: api.mycompany.com
+      http:
+        paths:
+          - path: /api/orders(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: order-service
+                port:
+                  number: 8080
+          - path: /api/payments(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: payment-service
+                port:
+                  number: 8080
+          - path: /api/users(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: user-service
+                port:
+                  number: 8080
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
+```
+
+#### AWS ALB Ingress Controller
+
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-ingress
+  namespace: backend
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip           # Pod IP targeting (faster)
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:123456789:certificate/abc-123
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/group.name: api-group     # Share ALB across Ingress resources
+    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-south-1:123456789:regional/webacl/prod-waf/abc
+spec:
+  rules:
+    - host: api.mycompany.com
+      http:
+        paths:
+          - path: /api/orders
+            pathType: Prefix
+            backend:
+              service:
+                name: order-service
+                port:
+                  number: 8080
+          - path: /api/payments
+            pathType: Prefix
+            backend:
+              service:
+                name: payment-service
+                port:
+                  number: 8080
+```
+
+#### NGINX Ingress Canary Routing
+
+```yaml
+# Stable ingress — receives 100% traffic by default
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: order-service-stable
+  namespace: backend
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: api.mycompany.com
+      http:
+        paths:
+          - path: /api/orders
+            pathType: Prefix
+            backend:
+              service:
+                name: order-service-stable
+                port:
+                  number: 8080
+
+---
+# Canary ingress — receives 10% of traffic
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: order-service-canary
+  namespace: backend
+  annotations:
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-weight: "10"         # 10% traffic
+    # Or header-based:
+    # nginx.ingress.kubernetes.io/canary-by-header: "x-canary"
+    # nginx.ingress.kubernetes.io/canary-by-header-value: "true"
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: api.mycompany.com
+      http:
+        paths:
+          - path: /api/orders
+            pathType: Prefix
+            backend:
+              service:
+                name: order-service-canary
+                port:
+                  number: 8080
+```
+
+#### Comparison: NGINX vs ALB Ingress Controller
+
+| Feature | NGINX Ingress | AWS ALB Ingress |
+|---------|---------------|-----------------|
+| Type | L7 proxy (pod inside cluster) | AWS-managed ALB |
+| TLS | cert-manager / Secrets | ACM (free, auto-renew) |
+| WAF | ModSecurity (limited) | AWS WAF v2 (full) |
+| Auth | Basic auth, OAuth | Cognito, OIDC |
+| Canary | Weight + header routing | Weighted target groups |
+| Cost | Pods + NLB (~$18/mo) | ALB (~$18/mo + LCU) |
+| Cross-namespace | Yes | Yes (group.name) |
+| WebSocket | Yes | Yes |
+| Best for | Multi-cloud, complex routing | AWS-native, WAF/Cognito |
+
+#### TLS with cert-manager (Auto Let's Encrypt)
+
+```yaml
+# Install cert-manager
+# helm install cert-manager jetstack/cert-manager --set installCRDs=true -n cert-manager
+
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: devops@mycompany.com
+    privateKeySecretRef:
+      name: letsencrypt-prod-key
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
+      # Or DNS-based (for wildcard certs):
+      # - dns01:
+      #     route53:
+      #       region: ap-south-1
+```
+
+```bash
+# Troubleshooting Ingress
+kubectl get ingress -n backend
+kubectl describe ingress api-ingress -n backend
+
+# Check NGINX Ingress controller logs
+kubectl logs -n ingress-nginx -l app.kubernetes.io/name=ingress-nginx --tail=50
+
+# Test from inside cluster
+kubectl run curl --image=curlimages/curl --rm -it -- \
+  curl -H "Host: api.mycompany.com" http://ingress-nginx-controller.ingress-nginx.svc/api/orders
+```
+
+---
+
+## Q32. StatefulSets Deep Dive — Running Databases on Kubernetes
+
+### Question
+
+> You need to run a 3-node PostgreSQL cluster and a 3-broker Kafka cluster on Kubernetes. Why can't you use Deployments? Walk me through StatefulSet guarantees: stable network identity, ordered deployment, persistent storage, and headless services. How do you handle scaling, upgrades, and data safety?
+
+### Real-Life Scenario
+
+A team runs PostgreSQL as a Deployment with a PVC. When the pod restarts on a different node, it gets a new PVC (data lost). When they scale to 3 replicas, all 3 pods fight over the same PVC. They need StatefulSets.
+
+### Answer
+
+#### Why Deployments Don't Work for Stateful Workloads
+
+```
+Deployment pods:
+  ├── Random names: order-svc-7f8d9-abc12, order-svc-7f8d9-xyz78
+  ├── No startup order: All start simultaneously
+  ├── Shared PVC: All replicas fight for one volume (or each gets random new one)
+  └── No stable identity: Pod DNS changes on restart
+
+StatefulSet pods:
+  ├── Predictable names: kafka-0, kafka-1, kafka-2
+  ├── Ordered startup: kafka-0 → kafka-1 → kafka-2 (sequential)
+  ├── Dedicated PVCs: kafka-0 → pvc-kafka-0, kafka-1 → pvc-kafka-1
+  └── Stable DNS: kafka-0.kafka-headless.data.svc.cluster.local (never changes)
+```
+
+#### StatefulSet for Kafka
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-headless           # Headless service (clusterIP: None)
+  namespace: data
+spec:
+  clusterIP: None                # No cluster IP — direct pod DNS
+  selector:
+    app: kafka
+  ports:
+    - port: 9092
+      name: broker
+    - port: 9093
+      name: controller
+
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: kafka
+  namespace: data
+spec:
+  serviceName: kafka-headless    # Links to headless service
+  replicas: 3
+  podManagementPolicy: Parallel  # Or OrderedReady (default)
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      partition: 0               # Update all pods (set to 2 to update only kafka-2)
+  selector:
+    matchLabels:
+      app: kafka
+  template:
+    metadata:
+      labels:
+        app: kafka
+    spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  app: kafka
+              topologyKey: kubernetes.io/hostname    # One broker per node
+      containers:
+        - name: kafka
+          image: confluentinc/cp-kafka:7.5.0
+          ports:
+            - containerPort: 9092
+              name: broker
+          env:
+            - name: KAFKA_NODE_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
+            - name: KAFKA_LISTENERS
+              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: "PLAINTEXT://$(POD_NAME).kafka-headless.data.svc.cluster.local:9092"
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          volumeMounts:
+            - name: kafka-data
+              mountPath: /var/kafka-data
+          resources:
+            requests:
+              cpu: "1"
+              memory: "2Gi"
+            limits:
+              cpu: "2"
+              memory: "4Gi"
+          readinessProbe:
+            tcpSocket:
+              port: 9092
+            initialDelaySeconds: 30
+            periodSeconds: 10
+
+  # Each pod gets its own PVC — data persists across restarts
+  volumeClaimTemplates:
+    - metadata:
+        name: kafka-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        storageClassName: gp3-encrypted
+        resources:
+          requests:
+            storage: 100Gi
+```
+
+#### Stable DNS Names (Headless Service)
+
+```bash
+# Each pod gets a predictable, stable DNS name:
+kafka-0.kafka-headless.data.svc.cluster.local → 10.0.1.42
+kafka-1.kafka-headless.data.svc.cluster.local → 10.0.2.18
+kafka-2.kafka-headless.data.svc.cluster.local → 10.0.3.55
+
+# Even if kafka-1 pod restarts on a different node,
+# its DNS name stays the same (only IP changes)
+# AND its PVC (kafka-data-kafka-1) reattaches
+
+# SRV records for port discovery:
+nslookup -type=SRV _broker._tcp.kafka-headless.data.svc.cluster.local
+```
+
+#### Scaling StatefulSets
+
+```bash
+# Scale up — adds kafka-3, kafka-4 (always sequential names)
+kubectl scale statefulset kafka -n data --replicas=5
+
+# Scale down — removes kafka-4 first, then kafka-3 (reverse order!)
+kubectl scale statefulset kafka -n data --replicas=3
+
+# IMPORTANT: PVCs are NOT deleted when scaling down!
+# kafka-data-kafka-3 and kafka-data-kafka-4 still exist
+# If you scale back up, the data is still there
+kubectl get pvc -n data
+# kafka-data-kafka-0  Bound   100Gi
+# kafka-data-kafka-1  Bound   100Gi
+# kafka-data-kafka-2  Bound   100Gi
+# kafka-data-kafka-3  Bound   100Gi  ← orphaned PVC (manual cleanup)
+# kafka-data-kafka-4  Bound   100Gi  ← orphaned PVC
+```
+
+#### Rolling Update with Partition (Canary for StatefulSets)
+
+```bash
+# Update only kafka-2 first (canary — test the new version)
+kubectl patch statefulset kafka -n data -p \
+  '{"spec":{"updateStrategy":{"rollingUpdate":{"partition":2}}}}'
+
+# Update the image
+kubectl set image statefulset kafka kafka=confluentinc/cp-kafka:7.6.0 -n data
+# Only kafka-2 gets updated (pods with ordinal >= partition)
+
+# Verify kafka-2 is healthy with new version
+# Then update all remaining pods
+kubectl patch statefulset kafka -n data -p \
+  '{"spec":{"updateStrategy":{"rollingUpdate":{"partition":0}}}}'
+# kafka-1 updates, then kafka-0 (reverse ordinal order)
+```
+
+---
+
+## Q33. Kubernetes Taints, Tolerations, and Node Affinity — Advanced Scheduling
+
+### Question
+
+> Your cluster has GPU nodes, high-memory nodes, and general-purpose nodes. You need ML workloads to ONLY run on GPU nodes, and regular workloads must NEVER be scheduled on GPU nodes. Additionally, certain critical services should prefer nodes in specific availability zones. Design a complete scheduling strategy using taints, tolerations, node affinity, and pod topology spread constraints.
+
+### Real-Life Scenario
+
+GPU nodes cost $3.06/hour (p3.2xlarge). A developer deploys a simple nginx pod without any node selector. It gets scheduled on a GPU node, wasting $73/day. Meanwhile, the ML team's training job can't find a GPU node and stays Pending for 2 hours.
+
+### Answer
+
+#### Taints and Tolerations — "Keep Pods Away From Nodes"
+
+```bash
+# Taint GPU nodes — no regular workloads allowed
+kubectl taint nodes gpu-node-1 nvidia.com/gpu=true:NoSchedule
+kubectl taint nodes gpu-node-2 nvidia.com/gpu=true:NoSchedule
+
+# Taint effects:
+# NoSchedule    → New pods won't be scheduled (existing pods stay)
+# PreferNoSchedule → Try to avoid, but allow if no other option
+# NoExecute     → Evict existing pods + prevent new ones
+```
+
+```yaml
+# ML workload with toleration — CAN run on GPU nodes
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ml-training
+  namespace: ml
+spec:
+  template:
+    spec:
+      tolerations:
+        - key: "nvidia.com/gpu"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
+      nodeSelector:
+        node-type: gpu               # Also use nodeSelector to REQUIRE GPU nodes
+      containers:
+        - name: training
+          image: mycompany/ml-training:v2
+          resources:
+            limits:
+              nvidia.com/gpu: 1       # Request 1 GPU
+```
+
+#### Node Affinity — "Prefer or Require Specific Nodes"
+
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: order-service
+  namespace: backend
+spec:
+  template:
+    spec:
+      affinity:
+        # Node Affinity — where can this pod run?
+        nodeAffinity:
+          # HARD requirement — must be on these instance types
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: node.kubernetes.io/instance-type
+                    operator: In
+                    values:
+                      - m5.xlarge
+                      - m5.2xlarge
+                      - m6i.xlarge
+                  - key: topology.kubernetes.io/zone
+                    operator: In
+                    values:
+                      - ap-south-1a
+                      - ap-south-1b
+          # SOFT preference — prefer ap-south-1a (closer to RDS)
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 80
+              preference:
+                matchExpressions:
+                  - key: topology.kubernetes.io/zone
+                    operator: In
+                    values:
+                      - ap-south-1a
+
+        # Pod Anti-Affinity — spread replicas across nodes
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  app: order-service
+              topologyKey: kubernetes.io/hostname   # One pod per node
+```
+
+#### Pod Topology Spread Constraints
+
+```yaml
+# Evenly spread pods across AZs and nodes
+spec:
+  template:
+    spec:
+      topologySpreadConstraints:
+        # Spread across AZs
+        - maxSkew: 1                    # Max difference between zones is 1
+          topologyKey: topology.kubernetes.io/zone
+          whenUnsatisfiable: DoNotSchedule   # Block if can't spread
+          labelSelector:
+            matchLabels:
+              app: order-service
+        # Spread across nodes within each AZ
+        - maxSkew: 1
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: ScheduleAnyway  # Best effort on nodes
+          labelSelector:
+            matchLabels:
+              app: order-service
+```
+
+```
+Result with 6 replicas across 3 AZs:
+  AZ-a:  Node-1: [pod]  Node-2: [pod]
+  AZ-b:  Node-3: [pod]  Node-4: [pod]
+  AZ-c:  Node-5: [pod]  Node-6: [pod]
+  
+  maxSkew=1 ensures no AZ has more than 1 extra pod vs any other
+```
+
+#### Scheduling Decision Table
+
+| Mechanism | Purpose | Scope |
+|-----------|---------|-------|
+| nodeSelector | Simple: match exact label | Node |
+| Taints/Tolerations | Repel pods from nodes | Node |
+| Node Affinity (required) | Must run on matching nodes | Node |
+| Node Affinity (preferred) | Try to run on matching nodes | Node |
+| Pod Affinity | Run near other specific pods | Pod-to-Pod |
+| Pod Anti-Affinity | Run away from specific pods | Pod-to-Pod |
+| Topology Spread | Even distribution across zones/nodes | Topology |
+
+---
+
+## Q34. Kubernetes API Versioning, CRDs, and Operators
+
+### Question
+
+> Your team builds a custom database provisioning workflow: when a developer creates a YAML called `kind: PostgresCluster`, Kubernetes should automatically spin up a 3-node PostgreSQL cluster with replication, backups, and monitoring. How do Custom Resource Definitions (CRDs) and Operators work? Walk me through building a simple operator pattern.
+
+### Real-Life Scenario
+
+Developers open Jira tickets to request new database clusters. A DBA manually provisions them — takes 2 days. With a Kubernetes Operator, developers create a `PostgresCluster` CR and get a fully configured cluster in 5 minutes.
+
+### Answer
+
+#### CRD + Operator Architecture
+
+```
+1. CRD defines a new resource type:
+   kind: PostgresCluster
+   
+2. User creates a PostgresCluster CR:
+   spec:
+     replicas: 3
+     version: "15"
+     storage: 100Gi
+
+3. Operator (a controller pod) watches for PostgresCluster CRs
+
+4. Operator creates underlying resources:
+   ├── StatefulSet (3 PostgreSQL pods)
+   ├── Service (headless + read/write)
+   ├── ConfigMap (postgresql.conf)
+   ├── Secret (credentials)
+   ├── CronJob (backups)
+   └── ServiceMonitor (Prometheus)
+
+5. Operator continuously reconciles:
+   Desired state (CR) ↔ Actual state (cluster resources)
+```
+
+#### Custom Resource Definition
+
+```yaml
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: postgresclusters.database.mycompany.com
+spec:
+  group: database.mycompany.com
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              required: ["replicas", "version"]
+              properties:
+                replicas:
+                  type: integer
+                  minimum: 1
+                  maximum: 7
+                version:
+                  type: string
+                  enum: ["14", "15", "16"]
+                storage:
+                  type: string
+                  default: "50Gi"
+                backup:
+                  type: object
+                  properties:
+                    schedule:
+                      type: string
+                      default: "0 2 * * *"
+                    retention:
+                      type: string
+                      default: "7d"
+            status:
+              type: object
+              properties:
+                phase:
+                  type: string
+                readyReplicas:
+                  type: integer
+      subresources:
+        status: {}
+      additionalPrinterColumns:
+        - name: Replicas
+          type: integer
+          jsonPath: .spec.replicas
+        - name: Version
+          type: string
+          jsonPath: .spec.version
+        - name: Status
+          type: string
+          jsonPath: .status.phase
+  scope: Namespaced
+  names:
+    plural: postgresclusters
+    singular: postgrescluster
+    kind: PostgresCluster
+    shortNames:
+      - pgc
+```
+
+#### Using the Custom Resource
+
+```yaml
+# Developer creates this — Operator does the rest
+apiVersion: database.mycompany.com/v1
+kind: PostgresCluster
+metadata:
+  name: orders-db
+  namespace: backend
+spec:
+  replicas: 3
+  version: "16"
+  storage: "100Gi"
+  backup:
+    schedule: "0 2 * * *"
+    retention: "30d"
+```
+
+```bash
+# kubectl works natively with CRDs
+kubectl get postgresclusters -n backend
+# NAME       REPLICAS   VERSION   STATUS
+# orders-db  3          16        Running
+
+kubectl describe pgc orders-db -n backend
+kubectl delete pgc orders-db -n backend    # Operator cleans everything up
+```
+
+#### Popular Production Operators
+
+| Operator | Purpose | Maturity |
+|----------|---------|----------|
+| CloudNativePG | PostgreSQL | Production-ready |
+| Strimzi | Apache Kafka | Production-ready |
+| Percona Operator | MySQL/MongoDB/PostgreSQL | Production-ready |
+| Redis Operator (Spotahome) | Redis Cluster | Production-ready |
+| Prometheus Operator | Prometheus/Alertmanager | Production-ready |
+| Cert-Manager | TLS certificates | Production-ready |
+| External Secrets Operator | Secrets from Vault/AWS/GCP | Production-ready |
+
+---
+
+## Q35. Kubernetes Service Accounts, IRSA, and Pod Identity
+
+### Question
+
+> Your pods need to access AWS services (S3, SQS, DynamoDB) without hardcoding AWS credentials. How does IAM Roles for Service Accounts (IRSA) work on EKS? Walk me through the OIDC trust chain, how a pod gets temporary credentials, and how to troubleshoot "Access Denied" errors.
+
+### Real-Life Scenario
+
+A developer stores AWS access keys in a Kubernetes Secret. The keys are in Git history (committed by mistake). They have full admin permissions. An attacker extracts the keys and mines Bitcoin on your AWS account — $50,000 bill.
+
+### Answer
+
+#### IRSA Architecture
+
+```
+1. EKS cluster has an OIDC provider:
+   oidc.eks.ap-south-1.amazonaws.com/id/ABC123
+
+2. IAM Role trusts the OIDC provider:
+   "Only pods with ServiceAccount 'order-sa' in namespace 'backend'
+    can assume this role"
+
+3. Pod starts → Kubelet injects a JWT token via projected volume
+   /var/run/secrets/eks.amazonaws.com/serviceaccount/token
+
+4. AWS SDK finds the token → calls STS AssumeRoleWithWebIdentity
+   → gets temporary credentials (auto-rotated every 15 min)
+
+5. Pod accesses S3/SQS/DynamoDB with temporary creds
+   → No hardcoded keys!
+```
+
+#### Setup IRSA Step by Step
+
+```bash
+# Step 1: Get OIDC provider URL
+aws eks describe-cluster --name production --query "cluster.identity.oidc.issuer" --output text
+# https://oidc.eks.ap-south-1.amazonaws.com/id/ABC123DEF456
+
+# Step 2: Create IAM policy
+cat > s3-policy.json << 'EOF'
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Action": [
+        "s3:GetObject",
+        "s3:PutObject",
+        "s3:ListBucket"
+      ],
+      "Resource": [
+        "arn:aws:s3:::mycompany-orders-bucket",
+        "arn:aws:s3:::mycompany-orders-bucket/*"
+      ]
+    }
+  ]
+}
+EOF
+
+aws iam create-policy \
+  --policy-name OrderServiceS3Access \
+  --policy-document file://s3-policy.json
+
+# Step 3: Create IAM role with OIDC trust
+cat > trust-policy.json << 'EOF'
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Principal": {
+        "Federated": "arn:aws:iam::123456789:oidc-provider/oidc.eks.ap-south-1.amazonaws.com/id/ABC123DEF456"
+      },
+      "Action": "sts:AssumeRoleWithWebIdentity",
+      "Condition": {
+        "StringEquals": {
+          "oidc.eks.ap-south-1.amazonaws.com/id/ABC123DEF456:sub": "system:serviceaccount:backend:order-sa",
+          "oidc.eks.ap-south-1.amazonaws.com/id/ABC123DEF456:aud": "sts.amazonaws.com"
+        }
+      }
+    }
+  ]
+}
+EOF
+
+aws iam create-role \
+  --role-name OrderServiceRole \
+  --assume-role-policy-document file://trust-policy.json
+
+aws iam attach-role-policy \
+  --role-name OrderServiceRole \
+  --policy-arn arn:aws:iam::123456789:policy/OrderServiceS3Access
+
+# Step 4: Create Kubernetes ServiceAccount with annotation
+kubectl create serviceaccount order-sa -n backend
+kubectl annotate serviceaccount order-sa -n backend \
+  eks.amazonaws.com/role-arn=arn:aws:iam::123456789:role/OrderServiceRole
+```
+
+```yaml
+# Step 5: Use the ServiceAccount in your Deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: order-service
+  namespace: backend
+spec:
+  template:
+    spec:
+      serviceAccountName: order-sa    # ← This is all you need!
+      containers:
+        - name: order-app
+          image: mycompany/order-service:v3
+          # No AWS_ACCESS_KEY_ID or AWS_SECRET_ACCESS_KEY needed!
+          # AWS SDK automatically uses the IRSA token
+```
+
+#### Troubleshooting IRSA
+
+```bash
+# Check ServiceAccount has the annotation
+kubectl get sa order-sa -n backend -o yaml | grep eks.amazonaws.com
+
+# Check the token is mounted inside the pod
+kubectl exec order-svc-abc12 -n backend -- \
+  cat /var/run/secrets/eks.amazonaws.com/serviceaccount/token | \
+  cut -d. -f2 | base64 -d | jq .
+# Should show: "sub": "system:serviceaccount:backend:order-sa"
+
+# Check environment variables injected by IRSA webhook
+kubectl exec order-svc-abc12 -n backend -- env | grep AWS
+# AWS_ROLE_ARN=arn:aws:iam::123456789:role/OrderServiceRole
+# AWS_WEB_IDENTITY_TOKEN_FILE=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
+
+# Test from inside the pod
+kubectl exec -it order-svc-abc12 -n backend -- \
+  aws sts get-caller-identity
+# Should return the OrderServiceRole, not the node role
+
+# Common issues:
+# 1. Missing annotation on ServiceAccount
+# 2. Trust policy condition doesn't match namespace:serviceaccount
+# 3. OIDC provider not associated with the EKS cluster
+# 4. Pod was created BEFORE the annotation (restart needed)
+```
+
+---
+
+## Q36. Kubernetes Networking Deep Dive — CNI, kube-proxy, iptables/IPVS
+
+### Question
+
+> A pod on Node A sends a request to a ClusterIP service. The service has 3 backend pods on Nodes A, B, and C. Trace the complete network path — from the pod's network namespace, through the CNI plugin, kube-proxy iptables/IPVS rules, and finally to the destination pod. How does pod-to-pod networking work across nodes?
+
+### Real-Life Scenario
+
+After migrating from Calico to AWS VPC CNI, pods can reach each other but external clients can't reach NodePort services. Investigation reveals kube-proxy iptables rules are not being programmed because kube-proxy pods are CrashLooping due to incompatible configuration.
+
+### Answer
+
+#### Kubernetes Networking Model — The 4 Requirements
+
+```
+1. Pod-to-Pod:   Every pod can reach every other pod without NAT
+2. Node-to-Pod:  Every node can reach every pod without NAT
+3. Pod identity: The IP a pod sees for itself = what others see
+4. Services:     ClusterIP provides stable virtual IP + load balancing
+```
+
+#### Pod-to-Pod Communication (Same Node)
+
+```
+Pod A (10.0.1.10)                   Pod B (10.0.1.11)
+    │ eth0                              │ eth0
+    │                                   │
+    └──── veth pair ────┐    ┌── veth pair ────┘
+                        │    │
+                     ┌──┴────┴──┐
+                     │  cbr0     │   ← Linux bridge (or eBPF in Cilium)
+                     │  (bridge) │
+                     └───────────┘
+                     
+Packet: 10.0.1.10 → 10.0.1.11
+Route: Pod A → veth → bridge → veth → Pod B
+(Never leaves the node — fastest path)
+```
+
+#### Pod-to-Pod Communication (Different Nodes — AWS VPC CNI)
+
+```
+Node A (10.0.1.5)                     Node B (10.0.2.8)
+┌─────────────────┐                  ┌─────────────────┐
+│ Pod A (10.0.1.10)│                 │ Pod B (10.0.2.20)│
+│     │ eth0       │                 │     │ eth0       │
+│     └── veth ──┐ │                 │ ┌── veth ──┘     │
+│                │ │                 │ │                │
+│            ┌───┴─┤                 ├─┴───┐            │
+│            │ ENI │                 │ ENI │            │
+│            │(sec)│                 │(sec)│            │
+└────────────┴─────┘                 └─────┴────────────┘
+                 │                       │
+                 └───── VPC Routing ─────┘
+                   (AWS handles routing between ENIs)
+
+AWS VPC CNI: Each pod gets a REAL VPC IP from the subnet
+  → No overlay, no encapsulation
+  → Same performance as EC2-to-EC2
+  → Security Groups can be applied per-pod
+```
+
+#### ClusterIP Service — How kube-proxy Routes Traffic
+
+```bash
+# Service: order-service → ClusterIP 10.100.42.15
+# Endpoints: 10.0.1.10:8080, 10.0.2.20:8080, 10.0.3.30:8080
+
+# kube-proxy mode: iptables (default)
+# Check the rules:
+iptables -t nat -L KUBE-SERVICES -n | grep order-service
+
+# What happens when Pod A calls 10.100.42.15:80:
+# 1. Pod A sends packet to 10.100.42.15 (ClusterIP — virtual, exists nowhere)
+# 2. Packet hits iptables PREROUTING chain
+# 3. KUBE-SERVICES chain matches the ClusterIP
+# 4. DNAT rule randomly selects one backend pod:
+#    10.100.42.15 → 10.0.2.20 (selected by probability rules)
+# 5. Packet is routed to the actual pod IP
+# 6. Response goes back directly (or via conntrack)
+```
+
+```bash
+# kube-proxy mode: IPVS (better performance for large clusters)
+# Advantages over iptables:
+# - O(1) lookup vs O(n) iptables rules
+# - Multiple load balancing algorithms (round-robin, least connections, etc.)
+# - Better performance with 1000+ services
+
+# Check IPVS rules
+ipvsadm -ln | grep -A3 10.100.42.15
+# TCP  10.100.42.15:80 rr
+#   -> 10.0.1.10:8080   Masq   1  0  0
+#   -> 10.0.2.20:8080   Masq   1  0  0
+#   -> 10.0.3.30:8080   Masq   1  0  0
+```
+
+#### CNI Plugin Comparison
+
+| Feature | AWS VPC CNI | Calico | Cilium |
+|---------|-------------|--------|--------|
+| IP allocation | VPC subnet IPs | IPAM (overlay or BGP) | IPAM (overlay or native) |
+| Overlay | No (native VPC routing) | VXLAN or IPinIP or BGP | VXLAN or native |
+| Performance | Best on AWS (no encap) | Good | Best (eBPF, no iptables) |
+| Network Policy | Yes (via Calico addon) | Yes (native) | Yes (native + L7) |
+| Per-pod SG | Yes (SG for Pods) | No | No |
+| eBPF | No | Yes (optional) | Yes (default) |
+| Best for | EKS | Multi-cloud, on-prem | Advanced observability |
+
+---
+
+## Q37. Kubernetes ConfigMap and Secret Management — Advanced Patterns
+
+### Question
+
+> Your application needs different configurations per environment (dev/staging/prod). Some values change frequently (feature flags), and some are sensitive (API keys, DB passwords). Design a ConfigMap/Secret strategy that supports: environment-specific values, hot-reload without pod restart, immutable configs for production safety, and external secret management integration.
+
+### Real-Life Scenario
+
+A developer changes a ConfigMap value in production. All 50 pods see the change at different times (kubelet sync delay: 30s-2min). For 2 minutes, some pods use the old config and some use the new one. An order is processed with mismatched config, resulting in a double charge.
+
+### Answer
+
+#### ConfigMap Consumption Methods
+
+```yaml
+# Method 1: Environment Variables (simple but no hot-reload)
+containers:
+  - name: app
+    env:
+      - name: LOG_LEVEL
+        valueFrom:
+          configMapKeyRef:
+            name: order-config
+            key: LOG_LEVEL
+      - name: DB_HOST
+        valueFrom:
+          configMapKeyRef:
+            name: order-config
+            key: DB_HOST
+
+# Method 2: Volume Mount (supports hot-reload)
+containers:
+  - name: app
+    volumeMounts:
+      - name: config
+        mountPath: /etc/config
+        readOnly: true
+volumes:
+  - name: config
+    configMap:
+      name: order-config
+
+# Method 3: envFrom (all keys as env vars)
+containers:
+  - name: app
+    envFrom:
+      - configMapRef:
+          name: order-config
+        prefix: APP_             # APP_LOG_LEVEL, APP_DB_HOST, etc.
+```
+
+#### Immutable ConfigMaps (Production Safety)
+
+```yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: order-config-v3         # Version in the name!
+  namespace: backend
+immutable: true                  # Cannot be changed after creation
+data:
+  LOG_LEVEL: "warn"
+  CACHE_TTL: "300"
+  FEATURE_NEW_CHECKOUT: "true"
+```
+
+```yaml
+# Deployment references the versioned ConfigMap
+spec:
+  template:
+    metadata:
+      annotations:
+        configmap-version: "v3"     # Forces rolling update when version changes
+    spec:
+      volumes:
+        - name: config
+          configMap:
+            name: order-config-v3   # Change to v4 → triggers rolling update
+```
+
+```bash
+# Config rollout workflow:
+# 1. Create new ConfigMap: order-config-v4
+# 2. Update Deployment to reference v4
+# 3. Deployment does rolling update (all pods get v4 simultaneously)
+# 4. Rollback? Change back to v3 — instant!
+```
+
+#### Auto-Reload with Checksum Annotation
+
+```yaml
+# Helm pattern: auto-restart pods when config changes
+spec:
+  template:
+    metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+    # When ConfigMap content changes, checksum changes,
+    # which changes the pod template, triggering a rolling update
+```
+
+#### External Secrets Operator — Sync from AWS Secrets Manager
+
+```yaml
+# Install ESO: helm install external-secrets external-secrets/external-secrets -n external-secrets
+
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: aws-secrets-manager
+  namespace: backend
+spec:
+  provider:
+    aws:
+      service: SecretsManager
+      region: ap-south-1
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: external-secrets-sa    # Uses IRSA
+
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: order-db-credentials
+  namespace: backend
+spec:
+  refreshInterval: 1h                   # Sync every hour
+  secretStoreRef:
+    name: aws-secrets-manager
+    kind: SecretStore
+  target:
+    name: order-db-credentials           # K8s Secret name created
+    creationPolicy: Owner
+  data:
+    - secretKey: username
+      remoteRef:
+        key: prod/order-service/db       # AWS Secrets Manager key
+        property: username
+    - secretKey: password
+      remoteRef:
+        key: prod/order-service/db
+        property: password
+```
+
+```bash
+# Verify the ExternalSecret synced
+kubectl get externalsecret -n backend
+# NAME                  STORE                  REFRESH   STATUS
+# order-db-credentials  aws-secrets-manager    1h        SecretSynced
+
+kubectl get secret order-db-credentials -n backend
+# Kubernetes Secret auto-created from AWS Secrets Manager
+```
+
+---
+
+## Q38. Kubernetes Autoscaling Trio — HPA + VPA + Cluster Autoscaler
+
+### Question
+
+> Explain the interaction between HPA (Horizontal Pod Autoscaler), VPA (Vertical Pod Autoscaler), and Cluster Autoscaler. Can you use HPA and VPA together? What happens when HPA wants to add pods but there are no nodes available? Walk me through the full scaling chain from "traffic increases" to "new nodes spin up."
+
+### Real-Life Scenario
+
+Black Friday sale: traffic increases 10x in 5 minutes. HPA tries to scale order-service from 5 to 50 pods. But the cluster only has capacity for 20 more pods. 30 pods stay Pending. Cluster Autoscaler detects Pending pods and starts provisioning new nodes — but AWS takes 3-4 minutes to launch instances. For 4 minutes, you're serving only 40% of traffic.
+
+### Answer
+
+#### The Scaling Chain
+
+```
+Traffic increases → response latency rises → CPU usage increases
+    │
+    ▼
+HPA detects CPU > 60% target → scales Deployment from 5 → 50 replicas
+    │
+    ▼
+Scheduler tries to place 45 new pods → only 20 fit on existing nodes
+    │
+    ▼
+25 pods remain Pending (Insufficient CPU/Memory)
+    │
+    ▼
+Cluster Autoscaler detects Pending pods → calculates needed node count
+    │
+    ▼
+Requests 5 new m5.2xlarge nodes from AWS ASG
+    │
+    ▼
+Nodes launch (3-4 min) → join cluster → kubelet registers → pods scheduled
+    │
+    ▼
+All 50 pods running → traffic served
+    │
+    ▼
+Traffic decreases → HPA scales down to 10 → pods terminated
+    │
+    ▼
+Nodes become underutilized → Cluster Autoscaler scales down after 10 min
+    │
+    ▼
+Drains and terminates excess nodes → cost savings
+```
+
+#### HPA + VPA Together?
+
+```
+HPA scales HORIZONTALLY (more pods)
+VPA scales VERTICALLY (bigger pods)
+
+Can they work together?
+  ❌ DON'T use both on CPU/memory for the same Deployment
+     (They'll fight — HPA wants more pods, VPA wants bigger pods)
+  
+  ✅ Use HPA on custom metrics + VPA on CPU/memory
+     HPA scales based on: requests per second (custom metric)
+     VPA right-sizes based on: actual CPU/memory usage
+```
+
+```yaml
+# Safe combination: HPA on custom metrics + VPA on resources
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: order-service-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: order-service
+  minReplicas: 3
+  maxReplicas: 50
+  metrics:
+    - type: Pods
+      pods:
+        metric:
+          name: http_requests_per_second    # Custom metric only!
+        target:
+          type: AverageValue
+          averageValue: "100"
+    # Don't add CPU/memory metrics here if using VPA
+
+---
+apiVersion: autoscaling.k8s.io/v1
+kind: VerticalPodAutoscaler
+metadata:
+  name: order-service-vpa
+spec:
+  targetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: order-service
+  updatePolicy:
+    updateMode: "Auto"           # Auto-resize CPU/memory
+```
+
+#### Karpenter vs Cluster Autoscaler
+
+| Feature | Cluster Autoscaler | Karpenter |
+|---------|-------------------|-----------|
+| Node provisioning | Via ASG (fixed instance types) | Direct EC2 API (any type) |
+| Speed | 3-5 min (ASG launch) | 60-90 sec (direct launch) |
+| Instance diversity | Pre-configured in ASG | Auto-selects best fit |
+| Spot handling | Limited | Native spot + on-demand mix |
+| Consolidation | Basic | Advanced (bin-packing) |
+| Node deprovisioning | Waits 10 min underutilized | Consolidates proactively |
+| Best for | Simple clusters | Large, dynamic clusters |
+
+```yaml
+# Karpenter NodePool — auto-selects optimal instance types
+apiVersion: karpenter.sh/v1beta1
+kind: NodePool
+metadata:
+  name: default
+spec:
+  template:
+    spec:
+      requirements:
+        - key: karpenter.sh/capacity-type
+          operator: In
+          values: ["on-demand", "spot"]
+        - key: kubernetes.io/arch
+          operator: In
+          values: ["amd64"]
+        - key: karpenter.k8s.aws/instance-category
+          operator: In
+          values: ["m", "c", "r"]       # General, compute, memory optimized
+        - key: karpenter.k8s.aws/instance-generation
+          operator: Gt
+          values: ["4"]                  # Only 5th gen+ (m5, m6, m7)
+      nodeClassRef:
+        name: default
+  limits:
+    cpu: 200                             # Max 200 vCPUs total
+    memory: 400Gi
+  disruption:
+    consolidationPolicy: WhenUnderutilized
+    consolidateAfter: 30s                # Consolidate quickly
+```
+
+---
+
+## Q39. Kubernetes Troubleshooting — Networking Issues
+
+### Question
+
+> Pods can reach other pods in the SAME namespace but NOT in different namespaces. Service calls work within the namespace but cross-namespace calls fail. Walk me through the debugging process. What are the most common networking misconfigurations?
+
+### Real-Life Scenario
+
+The order-service in the `backend` namespace can't reach `kafka-0.kafka-headless.data.svc.cluster.local`. The team suspects a DNS issue but DNS resolution works fine — the issue is a NetworkPolicy in the `data` namespace that has a default deny with no ingress rule allowing traffic from the `backend` namespace.
+
+### Answer
+
+#### Step-by-Step Debugging Cross-Namespace Communication
+
+```bash
+# Step 1: Verify DNS resolution works
+kubectl exec -n backend order-svc-abc12 -- \
+  nslookup kafka-0.kafka-headless.data.svc.cluster.local
+# If this FAILS → DNS issue (see Q12)
+# If this SUCCEEDS → Network connectivity issue
+
+# Step 2: Test TCP connectivity
+kubectl exec -n backend order-svc-abc12 -- \
+  nc -zv kafka-0.kafka-headless.data.svc.cluster.local 9092 -w 5
+# Connection timed out → Something blocking the traffic
+
+# Step 3: Check Network Policies in the TARGET namespace
+kubectl get networkpolicies -n data
+# NAME             POD-SELECTOR   AGE
+# default-deny     <none>         30d
+# allow-internal   app=kafka      30d
+
+kubectl describe networkpolicy default-deny -n data
+# Spec:
+#   PodSelector:     <none> (applies to ALL pods in namespace)
+#   PolicyTypes:     Ingress
+#   Ingress:         <none> (DENIES ALL ingress!)   ← Found it!
+
+# Step 4: Fix — add ingress rule allowing traffic from backend namespace
+```
+
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-backend-to-kafka
+  namespace: data
+spec:
+  podSelector:
+    matchLabels:
+      app: kafka
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: backend    # Built-in label
+        - podSelector:
+            matchLabels:
+              app: order-service                       # Only order-service pods
+      ports:
+        - protocol: TCP
+          port: 9092
+```
+
+#### Common Networking Issues Quick Reference
+
+| Symptom | Likely Cause | Fix |
+|---------|-------------|-----|
+| Can't reach cross-namespace service | NetworkPolicy default deny | Add ingress rule with namespaceSelector |
+| DNS works, TCP fails | NetworkPolicy or security group | Check NP in target namespace |
+| Intermittent timeouts | CoreDNS overloaded or conntrack full | Scale CoreDNS, increase conntrack max |
+| Pod can't reach external internet | Missing NAT Gateway or egress NP | Check VPC NAT config, egress NetworkPolicy |
+| NodePort not reachable | kube-proxy not running or SG blocking | Check kube-proxy, node Security Group |
+| New pods can't get IPs | VPC CNI IP exhaustion | Increase subnet size, enable prefix delegation |
+| Pod-to-pod latency spikes | Cross-AZ traffic or noisy neighbor | Check topology, use topology-aware routing |
+
+```bash
+# Useful networking debug commands
+# Check if kube-proxy is running
+kubectl get pods -n kube-system -l k8s-app=kube-proxy
+
+# Check iptables rules on a node
+kubectl debug node/ip-10-0-1-42 -it --image=ubuntu -- \
+  chroot /host iptables -t nat -L KUBE-SERVICES -n | head -50
+
+# Check conntrack table (connection tracking)
+kubectl debug node/ip-10-0-1-42 -it --image=ubuntu -- \
+  chroot /host conntrack -C
+# If near max → connections are being dropped
+
+# Check AWS VPC CNI IP allocation
+kubectl get pods -n kube-system -l k8s-app=aws-node
+kubectl logs -n kube-system -l k8s-app=aws-node | grep "IP addresses"
+```
+
+---
+
+## Q40. Kubernetes Pod Priority and Preemption
+
+### Question
+
+> During a traffic spike, your cluster is at 100% capacity. Critical payment pods can't be scheduled. Meanwhile, non-critical batch jobs occupy 40% of cluster resources. How do you ensure critical services get resources first using Pod Priority and Preemption?
+
+### Real-Life Scenario
+
+Black Friday: all nodes are full. HPA tries to scale payment-service from 5 to 15. 10 pods stay Pending. Meanwhile, a non-critical recommendation engine job uses 30 nodes worth of resources. You need payment pods to preempt (evict) recommendation pods.
+
+### Answer
+
+#### Priority Classes
+
+```yaml
+# System-critical (highest priority — reserved for platform)
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: system-critical
+value: 1000000
+globalDefault: false
+preemptionPolicy: PreemptLowerPriority
+description: "For system components (monitoring, logging, ingress)"
+
+---
+# Business-critical (payment, auth)
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: business-critical
+value: 100000
+globalDefault: false
+preemptionPolicy: PreemptLowerPriority
+description: "Revenue-critical services"
+
+---
+# Standard (most microservices)
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: standard
+value: 10000
+globalDefault: true            # Default for all pods without explicit priority
+preemptionPolicy: PreemptLowerPriority
+
+---
+# Low priority (batch jobs, dev workloads)
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: low-priority
+value: 1000
+globalDefault: false
+preemptionPolicy: Never        # Don't preempt others, but can be preempted
+description: "Batch jobs, can be evicted during resource pressure"
+```
+
+#### Using Priority in Deployments
+
+```yaml
+# Payment service — business-critical priority
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: payment-service
+  namespace: backend
+spec:
+  replicas: 5
+  template:
+    spec:
+      priorityClassName: business-critical    # ← High priority
+      containers:
+        - name: payment
+          image: mycompany/payment-service:v3
+
+---
+# Recommendation engine — low priority (can be evicted)
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: recommendation-job
+  namespace: ml
+spec:
+  template:
+    spec:
+      priorityClassName: low-priority         # ← Will be evicted if needed
+      containers:
+        - name: recommender
+          image: mycompany/recommender:v2
+```
+
+#### How Preemption Works
+
+```
+Scenario: Cluster full, payment-service needs 10 more pods
+
+1. Scheduler checks: any nodes with enough resources? → NO
+2. Scheduler checks: any lower-priority pods to preempt?
+   → YES: recommendation-job pods (priority 1000) < payment-service (100000)
+3. Scheduler selects pods to preempt:
+   - Picks pods with lowest priority first
+   - Prefers pods that release enough resources with fewest evictions
+   - Respects PDBs when possible
+4. Selected low-priority pods get graceful termination (terminationGracePeriodSeconds)
+5. Once terminated, high-priority pods are scheduled in their place
+```
+
+```bash
+# Check priority classes
+kubectl get priorityclasses
+# NAME                VALUE       GLOBAL-DEFAULT   AGE
+# system-critical     1000000     false            30d
+# business-critical   100000      false            30d
+# standard            10000       true             30d
+# low-priority        1000        false            30d
+
+# Check which pods have which priority
+kubectl get pods -n backend -o custom-columns=\
+  NAME:.metadata.name,\
+  PRIORITY:.spec.priorityClassName,\
+  VALUE:.spec.priority
+```
+
+---
+
+## Q41. Kubernetes Volume Snapshots and Data Migration
+
+### Question
+
+> Your 500GB PostgreSQL PVC needs to be migrated from gp2 to gp3 storage class with zero downtime. How do you use Volume Snapshots to clone a PVC, migrate data between storage classes, and create backup-restore workflows for stateful workloads?
+
+### Real-Life Scenario
+
+Your PostgreSQL database runs on a gp2 EBS volume. gp3 provides 20% lower cost and better baseline performance (3000 IOPS vs 100 IOPS/GB). You can't do in-place migration — you need a snapshot-based approach.
+
+### Answer
+
+#### VolumeSnapshot Workflow
+
+```yaml
+# Step 1: Create a VolumeSnapshotClass
+apiVersion: snapshot.storage.k8s.io/v1
+kind: VolumeSnapshotClass
+metadata:
+  name: ebs-snapshot-class
+driver: ebs.csi.aws.com
+deletionPolicy: Retain           # Keep snapshot even if VolumeSnapshot is deleted
+parameters:
+  tagSpecification_1: "Backup=true"
+
+---
+# Step 2: Create a snapshot from existing PVC
+apiVersion: snapshot.storage.k8s.io/v1
+kind: VolumeSnapshot
+metadata:
+  name: postgres-snapshot-20260512
+  namespace: data
+spec:
+  volumeSnapshotClassName: ebs-snapshot-class
+  source:
+    persistentVolumeClaimName: postgres-data-postgres-0    # Source PVC
+```
+
+```bash
+# Monitor snapshot progress
+kubectl get volumesnapshot -n data
+# NAME                          READYTOUSE   RESTORESIZE   AGE
+# postgres-snapshot-20260512    true         500Gi         5m
+
+# Step 3: Create NEW PVC from snapshot with gp3 storage class
+```
+
+```yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-data-gp3
+  namespace: data
+spec:
+  storageClassName: gp3-encrypted     # New storage class!
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Gi
+  dataSource:
+    name: postgres-snapshot-20260512
+    kind: VolumeSnapshot
+    apiGroup: snapshot.storage.k8s.io
+```
+
+```bash
+# Step 4: Scale down PostgreSQL, swap PVC, scale back up
+kubectl scale statefulset postgres -n data --replicas=0
+
+# Edit StatefulSet to use new PVC (or delete and recreate with new volumeClaimTemplates)
+# For StatefulSets, delete the StatefulSet without deleting pods:
+kubectl delete statefulset postgres -n data --cascade=orphan
+
+# Create new StatefulSet pointing to gp3 storage class
+kubectl apply -f postgres-statefulset-gp3.yaml
+
+# Scale back up
+kubectl scale statefulset postgres -n data --replicas=3
+
+# Step 5: Verify data integrity
+kubectl exec -n data postgres-0 -- psql -U postgres -c "SELECT count(*) FROM orders;"
+```
+
+#### Automated Backup CronJob with Snapshots
+
+```yaml
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: postgres-snapshot-backup
+  namespace: data
+spec:
+  schedule: "0 */6 * * *"     # Every 6 hours
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          serviceAccountName: snapshot-creator
+          containers:
+            - name: snapshot
+              image: bitnami/kubectl:1.29
+              command:
+                - /bin/sh
+                - -c
+                - |
+                  TIMESTAMP=$(date +%Y%m%d-%H%M)
+                  cat <<EOF | kubectl apply -f -
+                  apiVersion: snapshot.storage.k8s.io/v1
+                  kind: VolumeSnapshot
+                  metadata:
+                    name: postgres-auto-${TIMESTAMP}
+                    namespace: data
+                    labels:
+                      type: automated-backup
+                  spec:
+                    volumeSnapshotClassName: ebs-snapshot-class
+                    source:
+                      persistentVolumeClaimName: postgres-data-postgres-0
+                  EOF
+                  # Cleanup snapshots older than 7 days
+                  kubectl get volumesnapshot -n data -l type=automated-backup \
+                    --sort-by=.metadata.creationTimestamp \
+                    -o name | head -n -28 | xargs -r kubectl delete -n data
+          restartPolicy: OnFailure
+```
+
+---
+
+## Q42. Kubernetes Multi-Cluster Management
+
+### Question
+
+> Your organization has 3 EKS clusters: production (Mumbai), disaster-recovery (Singapore), and staging (Mumbai). How do you manage deployments across multiple clusters? How do you implement failover, consistent configuration, and centralized observability?
+
+### Real-Life Scenario
+
+Your Mumbai production cluster goes down due to an AWS AZ outage. It takes 45 minutes to manually deploy all services to the Singapore DR cluster. With multi-cluster GitOps, failover happens in under 5 minutes.
+
+### Answer
+
+#### Multi-Cluster Architecture
+
+```
+                    ┌─────────────────┐
+                    │  ArgoCD (Hub)    │
+                    │  Central GitOps  │
+                    └────────┬────────┘
+                             │
+              ┌──────────────┼──────────────┐
+              ▼              ▼              ▼
+        ┌──────────┐  ┌──────────┐  ┌──────────┐
+        │ Prod      │  │ DR       │  │ Staging  │
+        │ Mumbai    │  │ Singapore│  │ Mumbai   │
+        │ EKS      │  │ EKS      │  │ EKS      │
+        └──────────┘  └──────────┘  └──────────┘
+```
+
+#### ArgoCD Multi-Cluster ApplicationSet
+
+```yaml
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  name: order-service
+  namespace: argocd
+spec:
+  generators:
+    - clusters:
+        selector:
+          matchLabels:
+            environment: production
+        values:
+          replicas: "10"
+          imageTag: "v3.2.0"
+    - clusters:
+        selector:
+          matchLabels:
+            environment: dr
+        values:
+          replicas: "3"           # DR: minimal replicas, scale up on failover
+          imageTag: "v3.2.0"
+  template:
+    metadata:
+      name: 'order-service-{{name}}'
+    spec:
+      project: backend
+      source:
+        repoURL: https://github.com/mycompany/k8s-manifests.git
+        path: apps/order-service
+        helm:
+          parameters:
+            - name: replicaCount
+              value: '{{values.replicas}}'
+            - name: image.tag
+              value: '{{values.imageTag}}'
+      destination:
+        server: '{{server}}'
+        namespace: backend
+```
+
+#### Multi-Cluster kubectl Access
+
+```bash
+# Switch between clusters using context
+kubectl config get-contexts
+# CURRENT   NAME            CLUSTER               AUTHINFO
+# *         prod-mumbai     arn:aws:eks:ap-south   admin
+#           dr-singapore    arn:aws:eks:ap-south   admin
+#           staging-mumbai  arn:aws:eks:ap-south   admin
+
+# Switch context
+kubectl config use-context dr-singapore
+
+# Or use --context flag
+kubectl get pods -n backend --context=prod-mumbai
+kubectl get pods -n backend --context=dr-singapore
+```
+
+#### DNS-Based Failover with Route 53
+
+```bash
+# Route 53 health check on production endpoint
+# If production fails → Route 53 automatically routes to DR
+
+# Production: api.mycompany.com → prod ALB (primary, weight 100)
+# DR:         api.mycompany.com → dr ALB (secondary, weight 0)
+
+# On failover:
+# 1. Route 53 detects production health check failure
+# 2. Automatically routes traffic to DR ALB
+# 3. Scale up DR replicas:
+kubectl scale deployment --all --replicas=10 -n backend --context=dr-singapore
+```
+
+---
+
+## Q43. Kubernetes Security — RBAC Deep Dive
+
+### Question
+
+> Design an RBAC strategy for a platform with 5 teams. Each team should only access their own namespace. DevOps should have cluster-admin. Developers should be able to deploy and view logs but NOT delete production deployments or access secrets. How do you implement and audit RBAC?
+
+### Real-Life Scenario
+
+A junior developer runs `kubectl delete deployment --all -n production` thinking they're in the staging context. All production services go down. With proper RBAC, they wouldn't have delete permissions in production.
+
+### Answer
+
+#### RBAC Object Hierarchy
+
+```
+ClusterRole          → Defines permissions (cluster-wide)
+  └── ClusterRoleBinding → Binds to users/groups (cluster-wide)
+
+Role                 → Defines permissions (namespace-scoped)
+  └── RoleBinding     → Binds to users/groups (namespace-scoped)
+```
+
+#### Developer Role — Deploy and View, No Delete
+
+```yaml
+# Role: Developers can create/update deployments, view logs, but NOT delete
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: developer
+  namespace: backend
+rules:
+  # Can view all resources
+  - apiGroups: ["", "apps", "batch"]
+    resources: ["pods", "deployments", "services", "configmaps", "jobs", "cronjobs"]
+    verbs: ["get", "list", "watch"]
+
+  # Can create and update deployments (NOT delete)
+  - apiGroups: ["apps"]
+    resources: ["deployments"]
+    verbs: ["create", "update", "patch"]
+
+  # Can view pod logs
+  - apiGroups: [""]
+    resources: ["pods/log"]
+    verbs: ["get", "list"]
+
+  # Can exec into pods (debugging)
+  - apiGroups: [""]
+    resources: ["pods/exec"]
+    verbs: ["create"]
+
+  # Can port-forward
+  - apiGroups: [""]
+    resources: ["pods/portforward"]
+    verbs: ["create"]
+
+  # CANNOT access Secrets
+  # CANNOT delete Deployments
+  # CANNOT modify RBAC
+
+---
+# Bind role to the backend developer group (from IAM/OIDC)
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: backend-developers
+  namespace: backend
+subjects:
+  - kind: Group
+    name: backend-devs           # Maps to IAM group or OIDC claim
+    apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: developer
+  apiGroup: rbac.authorization.k8s.io
+```
+
+#### Production-Specific Read-Only Role
+
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: production-readonly
+  namespace: production
+rules:
+  - apiGroups: ["", "apps", "batch"]
+    resources: ["*"]
+    verbs: ["get", "list", "watch"]   # Read only — no create, update, delete
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: []                          # No access to secrets AT ALL
+```
+
+#### Auditing RBAC
+
+```bash
+# Check what a user CAN do
+kubectl auth can-i --list --as=developer@mycompany.com -n backend
+
+# Check specific permission
+kubectl auth can-i delete deployments -n production --as=developer@mycompany.com
+# no
+
+kubectl auth can-i create deployments -n backend --as=developer@mycompany.com
+# yes
+
+# Who can delete deployments in production?
+kubectl auth can-i delete deployments -n production --list
+
+# Find all role bindings for a user
+kubectl get rolebindings,clusterrolebindings --all-namespaces \
+  -o json | jq '.items[] | select(.subjects[]?.name == "backend-devs")'
+```
+
+#### EKS RBAC Integration with IAM
+
+```yaml
+# aws-auth ConfigMap — maps IAM roles to Kubernetes RBAC
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: aws-auth
+  namespace: kube-system
+data:
+  mapRoles: |
+    - rolearn: arn:aws:iam::123456789:role/EKSNodeRole
+      username: system:node:{{EC2PrivateDNSName}}
+      groups:
+        - system:bootstrappers
+        - system:nodes
+    - rolearn: arn:aws:iam::123456789:role/DevOpsRole
+      username: devops
+      groups:
+        - system:masters            # Full cluster admin
+    - rolearn: arn:aws:iam::123456789:role/BackendDevRole
+      username: backend-dev
+      groups:
+        - backend-devs              # Maps to our RoleBinding
+```
+
+---
+
+## Q44. Kubernetes Resource Management — LimitRange, Overhead, and QoS Deep Dive
+
+### Question
+
+> Explain how Kubernetes decides which pods to kill when a node runs out of memory. Walk me through QoS classes (Guaranteed, Burstable, BestEffort), OOM scoring, and how to design resource policies that protect critical services from eviction.
+
+### Real-Life Scenario
+
+A node runs out of memory. Kubernetes kills the payment-service pod (Burstable QoS, using 900Mi out of 1Gi limit) instead of a logging sidecar pod (BestEffort, no limits at all). The payment team is furious — why was their pod killed first?
+
+### Answer
+
+#### QoS Classes — Eviction Priority
+
+```
+BestEffort (evicted FIRST):
+  → No resource requests or limits set
+  → Kubernetes has no idea how much it needs
+  → First to be killed during pressure
+
+Burstable (evicted SECOND):
+  → Requests < Limits (or only one is set)
+  → Pod might use more than requested
+  → Killed based on how much it exceeds requests
+
+Guaranteed (evicted LAST):
+  → Requests == Limits (for ALL containers)
+  → Kubernetes knows exactly how much it needs
+  → Most protected from eviction
+```
+
+```yaml
+# Guaranteed QoS (safest — requests EQUAL limits)
+containers:
+  - name: payment
+    resources:
+      requests:
+        cpu: "1"
+        memory: "1Gi"
+      limits:
+        cpu: "1"           # Same as requests
+        memory: "1Gi"      # Same as requests
+
+# Burstable QoS (requests != limits)
+containers:
+  - name: order
+    resources:
+      requests:
+        cpu: "500m"
+        memory: "512Mi"
+      limits:
+        cpu: "2"           # Different from requests
+        memory: "2Gi"      # Different from requests
+
+# BestEffort QoS (no resources specified)
+containers:
+  - name: debug
+    # No resources section at all
+```
+
+#### OOM Kill Order Within Burstable
+
+```
+When node memory is exhausted, kubelet kills pods in this order:
+1. BestEffort pods (no resources specified)
+2. Burstable pods exceeding their REQUESTS (sorted by overshoot %)
+3. Burstable pods within their REQUESTS
+4. Guaranteed pods (last resort)
+
+For Burstable pods, OOM score is based on:
+  oom_score = (usage - requests) / requests × 1000
+
+  Pod A: requests=512Mi, usage=900Mi → score = (900-512)/512 × 1000 = 757
+  Pod B: requests=256Mi, usage=400Mi → score = (400-256)/256 × 1000 = 562
+
+  Pod A is killed first (higher score = evicted first)
+```
+
+#### Protect Critical Services
+
+```yaml
+# Strategy: Make critical services Guaranteed QoS
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: payment-service
+spec:
+  template:
+    spec:
+      # Use Guaranteed QoS for critical services
+      containers:
+        - name: payment
+          resources:
+            requests:
+              cpu: "1"
+              memory: "1Gi"
+            limits:
+              cpu: "1"
+              memory: "1Gi"
+      # Combined with high PriorityClass
+      priorityClassName: business-critical
+```
+
+```bash
+# Check QoS class of running pods
+kubectl get pods -n backend -o custom-columns=\
+  NAME:.metadata.name,\
+  QOS:.status.qosClass,\
+  REQUESTS_CPU:.spec.containers[0].resources.requests.cpu,\
+  LIMITS_CPU:.spec.containers[0].resources.limits.cpu
+
+# NAME                  QOS          REQUESTS_CPU   LIMITS_CPU
+# payment-svc-abc12     Guaranteed   1              1
+# order-svc-def34       Burstable    500m           2
+# debug-pod             BestEffort   <none>         <none>
+```
+
+#### Node Eviction Thresholds
+
+```bash
+# Kubelet eviction signals:
+# memory.available  < 100Mi → evict pods (hard eviction)
+# memory.available  < 300Mi → evict pods (soft eviction, grace period)
+# nodefs.available  < 10%   → evict pods (disk pressure)
+# imagefs.available < 15%   → evict images
+
+# Check node conditions
+kubectl describe node ip-10-0-1-42 | grep -A10 Conditions
+# MemoryPressure   False   → No memory pressure (good)
+# DiskPressure     False   → No disk pressure (good)
+# PIDPressure      False   → No PID pressure (good)
+```
+
+---
+
+## Q45. Kubernetes Graceful Shutdown and Zero-Downtime Deployments
+
+### Question
+
+> During rolling deployments, users see 502/504 errors for 5-10 seconds. The issue: old pods receive SIGTERM and stop accepting requests immediately, but the load balancer still sends traffic to them for a few more seconds. How do you implement truly zero-downtime deployments?
+
+### Real-Life Scenario
+
+During a deployment, the Ingress controller still routes traffic to a terminating pod for 5 seconds (ALB deregistration delay). The pod has already shut down its HTTP listener. Users see 502 Bad Gateway errors. The team adds a preStop hook sleep to keep the pod alive during deregistration.
+
+### Answer
+
+#### The Race Condition Problem
+
+```
+Timeline during pod termination:
+
+T+0s:  Kubernetes sends SIGTERM to pod
+T+0s:  Kubernetes removes pod from Endpoints
+        → But Endpoints update takes 1-5 seconds to propagate!
+        
+T+0s:  App receives SIGTERM, closes HTTP listener immediately
+T+1s:  kube-proxy updates iptables (removes pod from service)
+T+2s:  Ingress controller updates upstream list
+T+3s:  ALB deregisters target
+
+Between T+0s and T+3s: Traffic is STILL being sent to a dead pod!
+Result: 502/504 errors
+```
+
+#### The Fix — preStop Hook + Graceful Shutdown
+
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: order-service
+spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1              # Add 1 new pod before removing old
+      maxUnavailable: 0        # Never have fewer pods than desired
+  template:
+    spec:
+      terminationGracePeriodSeconds: 60     # Total time allowed for shutdown
+      containers:
+        - name: order-app
+          image: mycompany/order-service:v3
+          ports:
+            - containerPort: 8080
+
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/sh", "-c", "sleep 15"]
+                # ↑ Keeps the pod ALIVE for 15 seconds after SIGTERM
+                # During this time:
+                #   - Pod is removed from Endpoints
+                #   - kube-proxy updates iptables
+                #   - Ingress controller removes upstream
+                #   - ALB deregisters target
+                # After 15s: Pod actually starts shutting down
+                # No more traffic arrives at this point!
+
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 8080
+            periodSeconds: 5
+            failureThreshold: 1    # Remove from traffic quickly on failure
+```
+
+#### Complete Zero-Downtime Sequence
+
+```
+1. New pod starts → passes startup probe → passes readiness probe
+   → Added to Service endpoints → receives traffic ✅
+
+2. Old pod: SIGTERM sent
+   │
+   ├── preStop hook runs: sleep 15
+   │   ├── Endpoints updated (pod removed)          ~1-2s
+   │   ├── kube-proxy iptables updated              ~2-3s
+   │   ├── Ingress controller updated               ~3-5s
+   │   ├── ALB target deregistered                  ~5-10s
+   │   └── All traffic drained from old pod         ~15s ✅
+   │
+   ├── preStop hook completes
+   │
+   ├── SIGTERM delivered to application
+   │   ├── Stop accepting NEW connections
+   │   ├── Finish processing in-flight requests
+   │   └── Close database connections, flush buffers
+   │
+   └── Container exits gracefully
+
+3. Zero errors during the entire process ✅
+```
+
+#### Application-Side Graceful Shutdown
+
+```python
+# Python Flask/Gunicorn example
+import signal
+import sys
+
+def graceful_shutdown(signum, frame):
+    """Handle SIGTERM — finish current requests, then exit"""
+    print("SIGTERM received, starting graceful shutdown...")
+    # Stop accepting new requests (handled by readiness probe failing)
+    # Finish in-flight requests (Gunicorn does this automatically)
+    # Close connections
+    db.close_all_connections()
+    cache.close()
+    sys.exit(0)
+
+signal.signal(signal.SIGTERM, graceful_shutdown)
+```
+
+```javascript
+// Node.js example
+process.on('SIGTERM', async () => {
+  console.log('SIGTERM received, shutting down gracefully...');
+  
+  // Stop accepting new connections
+  server.close(async () => {
+    // Close database connections
+    await db.end();
+    // Close Redis
+    await redis.quit();
+    console.log('Cleanup complete, exiting.');
+    process.exit(0);
+  });
+  
+  // Force exit after 25s (before terminationGracePeriodSeconds)
+  setTimeout(() => process.exit(1), 25000);
+});
+```
+
+---
+
+## Q46. Kubernetes with Terraform — IaC for Cluster and Workloads
+
+### Question
+
+> Should you manage Kubernetes resources (Deployments, Services) with Terraform or kubectl/Helm? What are the pros and cons? When does it make sense to use Terraform for K8s resources vs using ArgoCD? Walk me through managing an EKS cluster AND its workloads with Terraform.
+
+### Real-Life Scenario
+
+A team manages everything with Terraform — cluster, node groups, AND application deployments. When a developer changes a Deployment manifest, they need to run `terraform apply` which also checks 200 other resources (VPC, subnets, IAM roles). A simple deployment takes 15 minutes and requires Terraform state lock access.
+
+### Answer
+
+#### Recommended Separation of Concerns
+
+```
+Terraform (Infrastructure):
+├── VPC, Subnets, NAT Gateway
+├── EKS Cluster
+├── Node Groups / Karpenter
+├── IAM Roles, OIDC Provider
+├── RDS, ElastiCache, S3
+├── Route 53 zones
+├── Security Groups
+├── Add-ons: CoreDNS, kube-proxy, VPC CNI
+└── Namespaces, RBAC (optional)
+
+ArgoCD/Helm (Workloads):
+├── Deployments, Services
+├── ConfigMaps, Secrets (via ESO)
+├── Ingress rules
+├── HPA, PDB
+├── Network Policies
+├── Application-level CRDs
+└── Monitoring (ServiceMonitor, PrometheusRules)
+```
+
+**Why?**
+```
+Terraform strengths:
+  ✅ Infrastructure provisioning (create/destroy cloud resources)
+  ✅ State tracking for cloud resources
+  ✅ Provider ecosystem (AWS, GCP, Azure in one config)
+  
+Terraform weaknesses for K8s:
+  ❌ Slow feedback loop (plan + apply for simple deployment change)
+  ❌ State file conflicts with multiple deployers
+  ❌ No drift detection on running workloads
+  ❌ No auto-healing (if someone kubectl edits, Terraform doesn't know)
+
+ArgoCD strengths for K8s:
+  ✅ Continuous reconciliation (auto-heal drift)
+  ✅ Fast deployments (Git push → deploy)
+  ✅ Rollback via Git revert
+  ✅ Developer-friendly (just change YAML, push, done)
+```
+
+#### Terraform for EKS + ArgoCD Bootstrap
+
+```hcl
+# Terraform creates cluster + bootstraps ArgoCD
+# After that, ArgoCD manages all workloads
+
+module "eks" {
+  source  = "terraform-aws-modules/eks/aws"
+  version = "~> 20.0"
+
+  cluster_name    = "production"
+  cluster_version = "1.30"
+
+  vpc_id     = module.vpc.vpc_id
+  subnet_ids = module.vpc.private_subnets
+
+  eks_managed_node_groups = {
+    workers = {
+      instance_types = ["m5.xlarge"]
+      min_size       = 3
+      max_size       = 20
+      desired_size   = 5
+    }
+  }
+
+  cluster_addons = {
+    coredns    = { most_recent = true }
+    kube-proxy = { most_recent = true }
+    vpc-cni    = { most_recent = true }
+  }
+}
+
+# Bootstrap ArgoCD via Terraform (one-time)
+resource "helm_release" "argocd" {
+  name             = "argocd"
+  repository       = "https://argoproj.github.io/argo-helm"
+  chart            = "argo-cd"
+  version          = "5.51.0"
+  namespace        = "argocd"
+  create_namespace = true
+
+  values = [file("argocd-values.yaml")]
+
+  depends_on = [module.eks]
+}
+
+# ArgoCD root app — manages everything else
+resource "kubectl_manifest" "argocd_root_app" {
+  yaml_body = file("argocd-root-app.yaml")
+  depends_on = [helm_release.argocd]
+}
+
+# After this: Terraform manages infra, ArgoCD manages workloads
+```
+
+---
+
+## Q47. Kubernetes Troubleshooting — Application Performance
+
+### Question
+
+> Your Java microservice on Kubernetes shows: P99 latency spikes to 5 seconds every 2 minutes, CPU throttling despite low average usage, and occasional OOMKilled events. Walk me through diagnosing JVM-specific issues on Kubernetes including GC pauses, CPU throttling due to CFS, and memory settings.
+
+### Real-Life Scenario
+
+A Java service requests 1 CPU and limits to 2 CPU. Despite average CPU being 400m, the service experiences 200ms latency spikes every few seconds. Investigation reveals CFS (Completely Fair Scheduler) CPU throttling — the JVM's GC threads burst to 4 CPUs during GC pauses, get throttled by the 2 CPU limit, and GC takes 10x longer.
+
+### Answer
+
+#### Problem 1: CPU Throttling (CFS Quota)
+
+```bash
+# Check if CPU throttling is occurring
+kubectl exec order-svc-abc12 -n backend -- \
+  cat /sys/fs/cgroup/cpu/cpu.stat
+# nr_periods 50000
+# nr_throttled 12500          ← 25% of periods are throttled!
+# throttled_time 98765432100  ← Total nanoseconds spent throttled
+
+# How CFS throttling works:
+# CPU limit = 2 → CFS quota = 200ms per 100ms period
+# If all 4 GC threads run simultaneously:
+#   4 threads × 50ms = 200ms of CPU time consumed in 50ms wall time
+#   Quota exhausted in 50ms → throttled for remaining 50ms
+#   Result: 50ms GC pause becomes 100ms+
+```
+
+```yaml
+# Fix Option 1: Remove CPU limits (keep requests)
+# This is Google's recommendation for non-batch workloads
+containers:
+  - name: order-app
+    resources:
+      requests:
+        cpu: "1"            # Scheduling guarantee
+        memory: "2Gi"
+      limits:
+        # cpu: removed!     # No CPU limit → no throttling
+        memory: "2Gi"       # Keep memory limit (OOM protection)
+
+# Fix Option 2: Use static CPU manager policy
+# Pin Guaranteed QoS pods to dedicated CPUs
+# kubelet flag: --cpu-manager-policy=static
+```
+
+#### Problem 2: JVM Memory in Containers
+
+```bash
+# JVM doesn't always detect container memory limits correctly
+# Check what the JVM thinks its heap should be
+kubectl exec order-svc-abc12 -n backend -- \
+  java -XX:+PrintFlagsFinal -version 2>&1 | grep -i heapsize
+# MaxHeapSize = 536870912 (512MB)
+
+# Container memory limit = 2Gi
+# JVM default: 25% of detected memory = 512MB
+# Remaining 1.5Gi: metaspace, thread stacks, native memory, off-heap
+```
+
+```yaml
+# Proper JVM memory configuration
+containers:
+  - name: order-app
+    image: mycompany/order-service:v3
+    env:
+      - name: JAVA_OPTS
+        value: >-
+          -XX:+UseContainerSupport
+          -XX:MaxRAMPercentage=75.0
+          -XX:InitialRAMPercentage=50.0
+          -XX:+UseG1GC
+          -XX:MaxGCPauseMillis=200
+          -XX:+HeapDumpOnOutOfMemoryError
+          -XX:HeapDumpPath=/tmp/heapdump.hprof
+    resources:
+      requests:
+        cpu: "1"
+        memory: "2Gi"
+      limits:
+        memory: "2Gi"
+    # Memory breakdown:
+    # Container limit: 2Gi
+    # JVM heap (75%): ~1.5Gi
+    # Metaspace: ~256Mi
+    # Thread stacks: ~128Mi
+    # Native/off-heap: ~128Mi
+```
+
+#### Problem 3: GC Pause Diagnosis
+
+```bash
+# Enable GC logging
+env:
+  - name: JAVA_OPTS
+    value: >-
+      -Xlog:gc*:file=/tmp/gc.log:time,uptime,level,tags:filecount=5,filesize=10M
+
+# Check GC logs
+kubectl exec order-svc-abc12 -n backend -- tail -50 /tmp/gc.log
+# [2026-05-12T10:15:32.123+0000] GC(145) Pause Full (G1 Humongous Allocation)
+# [2026-05-12T10:15:37.456+0000] GC(145) Pause Full 1800M->1200M 5.333s  ← 5 second pause!
+
+# Thread dump during latency spike
+kubectl exec order-svc-abc12 -n backend -- jstack $(pgrep java) > /tmp/thread-dump.txt
+
+# Heap histogram
+kubectl exec order-svc-abc12 -n backend -- jmap -histo:live $(pgrep java) | head -30
+```
+
+---
+
+## Q48. Kubernetes Windows Nodes and Mixed Clusters
+
+### Question
+
+> Your organization has a .NET Framework application that MUST run on Windows and a Go microservice that runs on Linux. Can you run both in the same EKS cluster? How do you schedule Windows pods to Windows nodes and Linux pods to Linux nodes?
+
+### Real-Life Scenario
+
+A legacy .NET Framework 4.8 application can't be containerized on Linux. The team runs a separate Windows EC2 fleet. By adding Windows node groups to the existing EKS cluster, they unify management and reduce operational overhead.
+
+### Answer
+
+#### Mixed Cluster Architecture
+
+```
+EKS Cluster
+├── Linux Node Group (m5.xlarge)
+│   ├── order-service (Go)
+│   ├── payment-service (Python)
+│   └── CoreDNS, kube-proxy, VPC CNI
+│
+└── Windows Node Group (m5.xlarge - Windows Server 2022)
+    ├── legacy-erp (.NET Framework 4.8)
+    └── reporting-service (.NET Framework)
+```
+
+#### Schedule Pods to Correct OS
+
+```yaml
+# Linux pod — explicit nodeSelector
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: order-service
+spec:
+  template:
+    spec:
+      nodeSelector:
+        kubernetes.io/os: linux        # Ensure Linux node
+      containers:
+        - name: order-app
+          image: mycompany/order-service:v3
+
+---
+# Windows pod — must target Windows nodes
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: legacy-erp
+spec:
+  template:
+    spec:
+      nodeSelector:
+        kubernetes.io/os: windows      # Must schedule on Windows
+      tolerations:
+        - key: "os"
+          operator: "Equal"
+          value: "windows"
+          effect: "NoSchedule"
+      containers:
+        - name: erp
+          image: mycompany/legacy-erp:v2
+          ports:
+            - containerPort: 80
+```
+
+#### Limitations of Windows Containers on Kubernetes
+
+```
+Supported:
+  ✅ Deployments, Services, ConfigMaps, Secrets
+  ✅ HPA, PDB
+  ✅ Persistent Volumes (EBS)
+  ✅ Resource limits
+
+NOT Supported:
+  ❌ DaemonSets (no privileged containers on Windows)
+  ❌ HostNetwork, HostPID, HostIPC
+  ❌ Privileged containers
+  ❌ Linux-specific features (seccomp, AppArmor, SELinux)
+  ❌ Some CNI features
+```
+
+---
+
+## Q49. Kubernetes Capacity Planning and Load Testing
+
+### Question
+
+> Your application needs to handle 50,000 requests per second during peak traffic. How do you determine the right number of pods, the right resource requests, and the right number of nodes? Walk me through a capacity planning methodology using load testing on Kubernetes.
+
+### Real-Life Scenario
+
+The marketing team announces a flash sale expected to bring 10x normal traffic. Last year's flash sale caused a complete outage because nobody tested at scale. This year, you need to prove the system can handle 50K RPS before the sale.
+
+### Answer
+
+#### Capacity Planning Methodology
+
+```
+Step 1: Benchmark a single pod
+  → How many RPS can ONE pod handle?
+  → At what point does latency degrade?
+
+Step 2: Calculate pod count
+  → Target RPS / per-pod RPS = minimum pods
+  → Add 30% headroom
+
+Step 3: Calculate node count
+  → Total pod resources / per-node capacity = minimum nodes
+  → Account for DaemonSets, system pods
+
+Step 4: Load test at target scale
+  → Validate the calculation
+  → Find bottlenecks (DB, network, dependencies)
+
+Step 5: Configure autoscaling
+  → HPA to handle variability
+  → Cluster Autoscaler / Karpenter for node scaling
+```
+
+#### Step 1: Single Pod Benchmark with k6
+
+```javascript
+// k6 load test script: benchmark.js
+import http from 'k6/http';
+import { check, sleep } from 'k6';
+
+export const options = {
+  stages: [
+    { duration: '2m', target: 100 },   // Ramp up to 100 VUs
+    { duration: '5m', target: 100 },   // Stay at 100 VUs
+    { duration: '2m', target: 500 },   // Ramp to 500
+    { duration: '5m', target: 500 },   // Stay at 500
+    { duration: '2m', target: 1000 },  // Ramp to 1000
+    { duration: '5m', target: 1000 },  // Stay at 1000
+    { duration: '2m', target: 0 },     // Ramp down
+  ],
+  thresholds: {
+    http_req_duration: ['p(99)<500'],  // 99th percentile < 500ms
+    http_req_failed: ['rate<0.01'],    // Error rate < 1%
+  },
+};
+
+export default function () {
+  const res = http.get('http://order-service.backend.svc:8080/api/v1/orders');
+  check(res, {
+    'status is 200': (r) => r.status === 200,
+    'response time < 500ms': (r) => r.timings.duration < 500,
+  });
+}
+```
+
+```bash
+# Run k6 as a Kubernetes Job
+kubectl run k6-test --image=grafana/k6 --rm -it -n load-test -- \
+  run /scripts/benchmark.js
+
+# Results:
+# 1 pod handles 500 RPS at P99 < 500ms
+# At 600 RPS, P99 exceeds 1s → bottleneck hit
+# Pod resource usage at 500 RPS: 450m CPU, 400Mi memory
+```
+
+#### Step 2: Calculate Requirements
+
+```
+Target: 50,000 RPS
+
+Per-pod capacity: 500 RPS
+Required pods:    50,000 / 500 = 100 pods
+With 30% headroom: 130 pods
+
+Per-pod resources: 500m CPU, 512Mi memory
+Total resources:   130 × 500m = 65 CPU, 130 × 512Mi = 65Gi memory
+
+Node type: m5.xlarge (4 vCPU, 16Gi)
+Allocatable per node: ~3.5 CPU, 14Gi (after system overhead)
+Pods per node: min(3.5/0.5, 14/0.512) = 7 pods per node
+Nodes needed: 130 / 7 = ~19 nodes
+
+Add 20% for DaemonSets + system pods: 23 nodes
+```
+
+#### Step 3: Full-Scale Load Test
+
+```yaml
+# Distributed k6 test using k6-operator
+apiVersion: k6.io/v1alpha1
+kind: TestRun
+metadata:
+  name: flash-sale-test
+  namespace: load-test
+spec:
+  parallelism: 20              # 20 k6 workers
+  script:
+    configMap:
+      name: k6-scripts
+      file: flash-sale.js
+  runner:
+    resources:
+      requests:
+        cpu: "1"
+        memory: "1Gi"
+```
+
+#### Step 4: Pre-Scale for the Event
+
+```bash
+# Pre-scale BEFORE the flash sale starts
+# 1. Scale pods
+kubectl scale deployment order-service -n backend --replicas=130
+
+# 2. Pre-warm nodes (if using Cluster Autoscaler)
+kubectl scale deployment placeholder -n kube-system --replicas=23
+# Placeholder pods request resources → triggers node provisioning
+# Once nodes are ready, scale down placeholder and real pods take their place
+
+# 3. Pre-warm ALB/NLB (AWS recommendation for > 50K RPS)
+# Contact AWS support to pre-warm the load balancer
+
+# 4. Pre-scale database connections
+# RDS: increase max_connections
+# ElastiCache: scale cluster nodes
+```
+
+---
+
+## Q50. Kubernetes Future — Gateway API, Sidecar-less Service Mesh, and Platform Engineering
+
+### Question
+
+> What's replacing Ingress? How is the service mesh landscape evolving? What is Platform Engineering and how does Kubernetes fit? Walk me through the future of Kubernetes for a senior architect preparing for 2026+.
+
+### Real-Life Scenario
+
+Your team uses Ingress, Istio sidecars, and custom scripts for developer self-service. Each technology has different APIs and mental models. The platform team wants to unify and simplify the developer experience while adopting modern Kubernetes patterns.
+
+### Answer
+
+#### Gateway API — The Ingress Replacement
+
+```
+Ingress (legacy):
+  - Single resource for all routing
+  - Limited: no TCP/UDP, no traffic splitting, no header matching
+  - Annotations-based config (vendor-specific, not portable)
+
+Gateway API (future):
+  - Multiple resources with clear separation of concerns
+  - Rich routing: headers, query params, traffic splitting
+  - Role-oriented: infra team manages Gateway, dev teams manage Routes
+  - Portable across implementations (NGINX, Envoy, Cilium, etc.)
+```
+
+```yaml
+# Gateway API: Infrastructure team creates the Gateway
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: production-gateway
+  namespace: gateway-infra
+spec:
+  gatewayClassName: aws-alb       # Or nginx, cilium, istio, envoy, etc.
+  listeners:
+    - name: https
+      protocol: HTTPS
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - name: wildcard-cert
+      allowedRoutes:
+        namespaces:
+          from: Selector
+          selector:
+            matchLabels:
+              gateway-access: "true"    # Only selected namespaces
+
+---
+# Gateway API: Dev team creates HTTPRoute (in their own namespace)
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: order-service-route
+  namespace: backend
+spec:
+  parentRefs:
+    - name: production-gateway
+      namespace: gateway-infra
+  hostnames:
+    - api.mycompany.com
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /api/orders
+          headers:
+            - name: x-api-version
+              value: "v2"
+      backendRefs:
+        - name: order-service-v2
+          port: 8080
+          weight: 90
+        - name: order-service-v3
+          port: 8080
+          weight: 10              # 10% canary — built into the API!
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /api/orders
+      backendRefs:
+        - name: order-service-v2
+          port: 8080
+```
+
+#### Sidecar-less Service Mesh (Cilium, Ambient Mesh)
+
+```
+Traditional Istio (sidecar model):
+  Every pod gets an Envoy sidecar
+  ❌ 2x pod count (memory/CPU overhead)
+  ❌ Added latency (extra network hops)
+  ❌ Complex debugging
+
+Istio Ambient Mesh (sidecar-less):
+  ztunnel (per-node) handles mTLS + L4
+  Waypoint proxy (per-service) handles L7
+  ✅ No sidecars in application pods
+  ✅ Lower resource overhead
+  ✅ Simpler operations
+
+Cilium Service Mesh (eBPF-based):
+  Uses eBPF in the Linux kernel
+  ✅ Zero sidecar, zero proxy for L3/L4
+  ✅ Near-native networking performance
+  ✅ Built-in observability (Hubble)
+```
+
+```yaml
+# Cilium: mTLS without sidecars
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: mutual-auth
+  namespace: backend
+spec:
+  endpointSelector:
+    matchLabels:
+      app: order-service
+  ingress:
+    - fromEndpoints:
+        - matchLabels:
+            app: payment-service
+      authentication:
+        mode: required           # mTLS enforced via eBPF (no sidecar needed!)
+```
+
+#### Platform Engineering — The Developer Experience Layer
+
+```
+Platform Engineering Goal:
+  Developers focus on CODE → Platform handles EVERYTHING else
+
+Developer experience:
+  "I want a new service with database, caching, monitoring, and CI/CD"
+  
+  → Create a simple YAML/API call
+  → Platform auto-provisions:
+     ├── GitHub repo (from template)
+     ├── CI/CD pipeline (GitHub Actions)
+     ├── Kubernetes namespace + RBAC
+     ├── Helm chart deployment via ArgoCD
+     ├── RDS database (via Crossplane/Terraform)
+     ├── Redis cache (via Crossplane)
+     ├── Prometheus + Grafana dashboards
+     ├── Alerting rules
+     └── DNS + TLS certificate
+```
+
+```yaml
+# Internal Developer Platform — Service catalog with Backstage
+apiVersion: platform.mycompany.com/v1
+kind: Service
+metadata:
+  name: recommendation-engine
+  namespace: ml
+spec:
+  team: ml-team
+  language: python
+  framework: fastapi
+  tier: standard                # standard | critical | batch
+
+  dependencies:
+    database:
+      type: postgresql
+      size: medium              # small=db.t3.small, medium=db.r5.large
+    cache:
+      type: redis
+      size: small
+    queue:
+      type: sqs
+
+  scaling:
+    minReplicas: 2
+    maxReplicas: 20
+    metric: requests-per-second
+    target: 200
+
+  observability:
+    logging: true
+    metrics: true
+    tracing: true
+    alerts:
+      - type: error-rate
+        threshold: "5%"
+        channel: "#ml-alerts"
+```
+
+#### Key Trends for 2026+ Kubernetes Architects
+
+| Trend | What It Means | Action |
+|-------|--------------|--------|
+| Gateway API | Replaces Ingress | Migrate Ingress → HTTPRoute |
+| Ambient Mesh | No more sidecars | Evaluate for Istio deployments |
+| Cilium/eBPF | Kernel-level networking | Consider for new clusters |
+| Karpenter | Replaces Cluster Autoscaler | Migrate ASG-based scaling |
+| Crossplane | Cloud resources as K8s CRDs | Unify IaC with K8s API |
+| Backstage / IDP | Developer self-service portals | Build platform abstractions |
+| Wasm on K8s | WebAssembly as container alternative | Explore for edge workloads |
+| AI/ML on K8s | GPU scheduling, model serving | Learn Kueue, KServe, Ray |
+
+---
+
+*Kubernetes Q&A complete (50 questions). Next topics: Docker, EKS, AWS, Prometheus, Grafana.*
